# controllers/reporter.js
@@ -112,7 +112,7 @@ exports.createReporter = (req, res) => {
 
 // Update a Reporter
 exports.updateReporter = (req, res) => {
-  //#swagger.tags=['Reporter']
+  //#swagger.tags=['Reporters']
   //#swagger.description= apiKey: Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N
   if (req.header('apiKey') === apiKey) {
     
@@ -152,7 +152,7 @@ exports.updateReporter = (req, res) => {
 
 // Delete a Reporter
 exports.deleteReporter = (req, res) => {
-  //#swagger.tags=['Reporter']
+  //#swagger.tags=['Reporters']
   //#swagger.description= apiKey: Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68Xwaj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N
   if (req.header('apiKey') === apiKey) {
 
